# lean-agent

./: .env.example  README.md  pyproject.toml
environments/: __init__.py
environments/minif2f_decompose/: README.md  __init__.py  env.py  lean_utils.py  proof_executor.py  prover_bench.py  pyproject.toml  system_prompt.py
environments/minif2f_decompose/minif2f_decompose/: __init__.py  clients.py  env.py  executor.py  http_utils.py  lean_utils.py  proof_executor.py  prover.py
environments/minif2f_decompose/outputs/evals/minif2f_decompose--gemini-2.5-flash/068d0a4b/: metadata.json  results.jsonl
environments/minif2f_decompose/outputs/evals/minif2f_decompose--gemini-2.5-flash/0a761de6/: metadata.json  results.jsonl
environments/minif2f_decompose/outputs/evals/minif2f_decompose--gemini-2.5-flash/11ad65e4/: metadata.json  results.jsonl
environments/minif2f_decompose/outputs/evals/minif2f_decompose--gemini-2.5-flash/152078d2/: metadata.json  results.jsonl
environments/minif2f_decompose/outputs/evals/minif2f_decompose--gemini-2.5-flash/15a6077b/: metadata.json  results.jsonl
environments/minif2f_decompose/outputs/evals/minif2f_decompose--gemini-2.5-flash/168f5231/: metadata.json  results.jsonl
environments/minif2f_decompose/outputs/evals/minif2f_decompose--gemini-2.5-flash/177f8149/: metadata.json  results.jsonl
environments/minif2f_decompose/outputs/evals/minif2f_decompose--gemini-2.5-flash/1a53f63f/: metadata.json  results.jsonl
environments/minif2f_decompose/tests/: test_executor.py
results/: prover_direct_20251207_174137.json  (+2 more)
scripts/: __init__.py  (+7 more)
(+197 files in other folders)
